@@ -1,3 +1,10 @@
+v2015-09-19
+  * vim:
+      更改了一些插件的行为
+  * zsh:
+      修正了一处android_env 无法编译出升级包的错误
+      修正了android_env 无法正确辨别是否存在vitualevnwrapper 的错误
+
 v2015-09-18.2
   * vim:
       修正了安装脚本中一处用于调试的手滑
@@ -17,6 +24,7 @@ v2015-09-18
   * vim:
       增加了几个代码高亮类插件
       修改了YCM 的配置方式
+
 v2015-09-07
   * zsh:
       修改了两个挂载函数
